--- a/index.html
+++ b/index.html
@@ -28,7 +28,28 @@
     <title>Omar McIntyre</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!------------------- HEADER -------------------->
+
+    <header class="header"></header>
+
+    <!-- ============== MAIN ==================== -->
+    <main class="main">
+      <!-- HOME ------>
+      <section class="home section" id="home"></section>
+
+      <!-- ABOUT ME -->
+      <section class="home section" id="home"></section>
+      <!-- QUALIFICATIONS(SKILLS AND EXPERIENCE) -->
+      <section class="qualification section" id="qualification"></section>
+
+      <!-- PORTFOLIO -->
+      <section class="portfolio section" id="portfolio"></section>
+
+      <!-- CONTACT US -->
+      <section class="contact section" id="portfolio"></section>
+    </main>
+    <!------------------- FOOTER -------------------->
+    <footer class="footer"></footer>
 
     <!-- Optional JavaScript -->
     <!-- Core -->
