--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
             </li>
           </ul>
         </div>
+        <div class="nav__btns">
+          <!-- THEME CHANGING BUTTONS -->
+          <i
+            data-mode="dark"
+            class="uil uil-moon moon-change-theme"
+            id="theme-button"
+          ></i>
+
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="uil uil-apps"></i>
+          </div>
+        </div>
       </nav>
     </header>
 
