--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               </a>
             </li>
           </ul>
+          <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
         <div class="nav__btns">
           <!-- THEME CHANGING BUTTONS -->
