--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600&family=Poppins:wght@200;300;400;600;800&family=Roboto&family=Roboto+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- ICONS -->
     <link
@@ -111,7 +115,77 @@
     <!-- ============== MAIN ==================== -->
     <main class="main">
       <!-- HOME ------>
-      <section class="home section" id="home"></section>
+      <section class="home section" id="home">
+        <div class="home__container container">
+          <div class="home__content">
+            <div class="home__social">
+              <a
+                href=""
+                target="_blank"
+                class="home__social-icon"
+                id="myLinedIn"
+              >
+                <i class="uil uil-linkedin"></i>
+              </a>
+              <a
+                href=""
+                target="_blank"
+                class="home__social-icon"
+                id="myInstagram"
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
+              <a
+                href=""
+                target="_blank"
+                class="home__social-icon"
+                id="myGithub"
+              >
+                <i class="uil uil-github-alt"></i>
+              </a>
+              <a
+                href=""
+                target="_blank"
+                class="home__social-icon"
+                id="myFacebook"
+              >
+                <i class="uil uil-facebook-f"></i>
+              </a>
+              <a
+                href=""
+                target="_blank"
+                class="home__social-icon"
+                id="myTwitter"
+              >
+                <i class="uil uil-twitter-alt"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="home__data">
+            <small class="home__welcome s-color"
+              >Welcome to My Portfolio Website</small
+            >
+            <h1 class="home__title">Hi I'm</h1>
+            <div id="typewriter" class="Typewriter"></div>
+            <h3 class="home__subtitle" id="home-bio">
+              An Audio Engineer interested in Learning the Fundamentals of the
+              Web and how it works.
+            </h3>
+
+            <a href="#contact" class="button button--flex">
+              Contact Me <i class="uil uil-message button__icon"></i>
+            </a>
+          </div>
+        </div>
+        <div class="home__scroll">
+          <a href="#about" class="home__scroll-button button--flex">
+            <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+            <!-- <span class="home__scroll-name">Scroll Down</span>
+            <i class="uil uil-arrow-down home__scroll-arrow"></i> -->
+          </a>
+        </div>
+      </section>
 
       <!-- ABOUT ME -->
       <section class="about section" id="about"></section>
@@ -139,6 +213,9 @@
 
     <!-- Argon JS -->
     <script src="js/argon-design-system.js"></script>
+
+    <!-- TYPEWRITER CSS EFFECT -->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
     <!-- Self Script -->
     <script src="js/script.js"></script>
