--- a/index.html
+++ b/index.html
@@ -188,7 +188,62 @@
       </section>
 
       <!-- ABOUT ME -->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <h2 class="section__title">About</h2>
+        <span class="section__subtitle"> My Introduction </span>
+
+        <div class="about__container container grid">
+          <img
+            src="/assets/img/img_1.jpg"
+            alt="test Photo"
+            class="about__img"
+          />
+
+          <div class="about__data">
+            <p class="about__description" id="home-about">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis odio nostrum ipsa quae ex nesciunt cumque totam
+              laboriosam repudiandae neque. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Aut non at ab.
+            </p>
+          </div>
+
+          <div class="about__info">
+            <div>
+              <span class="about__info-title"> 02+ </span>
+              <span class="about__info-name"
+                >Years of <br />
+                Experience</span
+              >
+            </div>
+
+            <div>
+              <span class="about__info-title"> 05+ </span>
+              <span class="about__info-name"
+                >Companies <br />
+                Worked</span
+              >
+            </div>
+
+            <div>
+              <span class="about__info-title"> 15+ </span>
+              <span class="about__info-name"
+                >Projects <br />
+                Completed</span
+              >
+            </div>
+          </div>
+          <div class="about__buttons">
+            <a
+              href="assets/file/cv.pdf"
+              class="button button--flex"
+              target="_blank"
+              download="my_CV"
+              >Download CV <i class="uil uil-download-alt button__icon"></i
+            ></a>
+          </div>
+        </div>
+      </section>
 
       <!-- SKILLS -->
       <section class="skills section" id="skills"></section>
