--- a/index.html
+++ b/index.html
@@ -246,7 +246,104 @@
       </section>
 
       <!-- SKILLS -->
-      <section class="skills section" id="skills"></section>
+      <section class="skills section" id="skills">
+        <h2 class="section__title">Skill Set</h2>
+        <span class="section__subtitle">My SKillsets </span>
+
+        <div class="skills__container container grid">
+          <div class="row" id="skillset_container">
+            <!-- Skill 1 -->
+            <div class="skills__container-card">
+              <div class="card_skill shadow2">
+                <div class="imgBx">
+                  <img
+                    src="assets/img/logos/html5-without-wordmark-color.svg"
+                    alt="HTML logo"
+                  />
+                </div>
+                <div class="contentBx">
+                  <h2>HTML</h2>
+                </div>
+              </div>
+            </div>
+
+            <!-- Skill 1 -->
+            <div class="skills__container-card">
+              <div class="card_skill shadow2">
+                <div class="imgBx">
+                  <img
+                    src="assets/img/logos/html5-without-wordmark-color.svg"
+                    alt="HTML logo"
+                  />
+                </div>
+                <div class="contentBx">
+                  <h2>HTML</h2>
+                </div>
+              </div>
+            </div>
+
+            <!-- Skill 1 -->
+            <div class="skills__container-card">
+              <div class="card_skill shadow2">
+                <div class="imgBx">
+                  <img
+                    src="assets/img/logos/html5-without-wordmark-color.svg"
+                    alt="HTML logo"
+                  />
+                </div>
+                <div class="contentBx">
+                  <h2>HTML</h2>
+                </div>
+              </div>
+            </div>
+
+            <!-- Skill 1 -->
+            <div class="skills__container-card">
+              <div class="card_skill shadow2">
+                <div class="imgBx">
+                  <img
+                    src="assets/img/logos/html5-without-wordmark-color.svg"
+                    alt="HTML logo"
+                  />
+                </div>
+                <div class="contentBx">
+                  <h2>HTML</h2>
+                </div>
+              </div>
+            </div>
+
+            <!-- Skill 1 -->
+            <div class="skills__container-card">
+              <div class="card_skill shadow2">
+                <div class="imgBx">
+                  <img
+                    src="assets/img/logos/html5-without-wordmark-color.svg"
+                    alt="HTML logo"
+                  />
+                </div>
+                <div class="contentBx">
+                  <h2>HTML</h2>
+                </div>
+              </div>
+            </div>
+
+            <!-- Skill 1 -->
+            <div class="skills__container-card">
+              <div class="card_skill shadow2">
+                <div class="imgBx">
+                  <img
+                    src="assets/img/logos/html5-without-wordmark-color.svg"
+                    alt="HTML logo"
+                  />
+                </div>
+                <div class="contentBx">
+                  <h2>HTML</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- QUALIFICATIONS (EDUCATION AND EXPERIENCE) -->
       <section class="qualification section" id="qualification"></section>
